# PuReX

./: CHANGELOG.md  README.md  objects.inv  prs.json  pyproject.toml
.github/workflows/: purex-predistribution-test.yml  purex-test.yml  python-test.yml
docs/_build/doctrees/: environment.pickle  index.doctree
src/purex/: __init__.py  cli.py  core.py  maintainers.py  prs.py
tests/: test_core.py
